minor: fixed z-index for touch area

--- a/src/containers/ImageCompareSlider.module.css
+++ b/src/containers/ImageCompareSlider.module.css
@@ -1,6 +1,6 @@
 .touchArea {
   position:absolute;
-  z-index: 100;
+  z-index: 10;
   width: 100%;
   touch-action: pinch-zoom pan-y;
 }
